plang/testing/logs/false-incorrect/200/program200.p.p
mG (kT jTy (C) (w0mS meCS (ez tCo (bx (KglKW) VNuT9) (VR0Nq)))) (hVMQ UKy) :- ((fuM cktMf W; v (Aefe0) (e0 (uI9pV) kpx), (lRE (h2B Dwbfb (lbka (NS) (ftY (P) pfhFB (Q))) (M9) (Uo8ek)) (Gt) p6OQt, j (Z9KH)))).
nH (DW) (dsO (bx c (zc0b (dvv) (Cc7)) (pB)) (mr v bfiNh CZh (DVV2U)) KmsF (H2ju)) :- (iHrv p (ZuVA5), aHLg (VOSG) (CL); gV; ((to (i)))), sxdY BhBQ (eAoa kwr1y cyc T uQme) r.
rKE (U) (K) (f (mx5EL (ae (jDAh DvZFh) a aX) (fh (oo Q Tm5 (J))) (l ls2L))) t.


xl OnlTG (n).


q8eTH gNmxl (fN x4l (vfKE (I) (At) BWg8c ye5u)).

cQsr3 (bIPA q2 (IkM) Sz9 N) (Z) (jvLsj (VD) (Lp) (u (P7Ez) Xz) (Cr7)) kU :- (xE (WUN) (U) (fSmG (n X7 mb (PmPM)) (lV8y (fe) (R3) FY (EWbyN)) (Oe1Jh) TD)).
jnm paER :- h (YTI6R) gqr d.


gDlV.


jZoKr OF Qpo9K S (bvz7 NNqm9) :- (zkUc (d9nyv) MrI1).
? (fHI BGB (Hn) spNt (xbNPa B7 j1l fx1Gt (K))).



